--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>app-template</title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+	<link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://unpkg.com/vue-material@latest/dist/vue-material.css">
   </head>
   <body>
   	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  	<script src="https://unpkg.com/vue-material@latest"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
